--- a/package.json
+++ b/package.json
@@ -52,7 +52,9 @@
     "@types/canvas-confetti": "^1.9.0",
     "@types/mdx": "^2.0.13",
     "@uiw/react-md-editor": "^4.0.5",
+    "agora-rtc-sdk-ng": "^4.23.2",
     "ai": "^4.1.64",
+    "axios": "^1.9.0",
     "canvas-confetti": "^1.9.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
